# XSS-Code-Injection---Ethical-Hacking-Project

./: .gitignore  LICENSE  Makefile  README.md  detect.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: auto_hook.py  beef_integration.py  cli.py  logging_config.py  stats_dashboard.py
src/config/: __init__.py  safety.py  settings.py
src/detection/: detect.py
src/injectors/: __init__.py  alert.py  base.py  beef.py  custom.py  eicar.py  keylogger.py
src/interceptor/: __init__.py  nfqueue_loop.py  packet_handler.py
src/mitm/: __init__.py  arp_spoofer.py  iptables_manager.py  shutdown.py
tests/: __init__.py  conftest.py  test_arp_spoofer.py  test_cli.py  test_injection.py  test_iptables.py  test_packet_handler.py  test_safety.py  test_shutdown.py
